# vapi

./: README.md  pyproject.toml
vapi/: main.py  models.py  seed.py
vapi/res/: seed1.txt  seed_cybersec.txt
vapi/utility/: build_incoming.py  filter_robots.py  inverted_index.py  page_rank.py  preprocess.py  seed.py
